Added simple arquillian test cases, support for more app servers