@@ -15,32 +15,42 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
+		<version>3.0.4</version>
 	</parent>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 
 		<jakartaee.version>9.1.0</jakartaee.version>
 		<microprofile.version>5.0</microprofile.version>
-		<eclipse.transformer.version>0.2.0</eclipse.transformer.version>
 
-		<liberty-runtime.version>22.0.0.1</liberty-runtime.version>
-		<liberty-maven-plugin.version>3.5.1</liberty-maven-plugin.version>
+		<!-- https://github.com/OpenLiberty/ci.maven -->
+		<liberty-maven-plugin.version>3.7.1</liberty-maven-plugin.version>
+		<liberty-runtime.version>23.0.0.1</liberty-runtime.version>
 
-		<cargo-maven-plugin.version>1.9.9</cargo-maven-plugin.version>
+		<!-- https://codehaus-cargo.github.io/cargo/Maven+3+Plugin+Reference+Guide.html -->
+		<!-- https://codehaus-cargo.github.io/cargo/Configuration+properties.html -->
+		<cargo-maven-plugin.version>1.10.5</cargo-maven-plugin.version>
+		<cargo-wildfly-runtime>wildfly27x</cargo-wildfly-runtime>
+
+		<!-- https://tomee.apache.org/master/docs/tomee-maven-plugin.html -->
+		<tomee-maven-plugin.version>9.0.0</tomee-maven-plugin.version>
+		<tomee-runtime.version>9.0.0</tomee-runtime.version>
+
+		<!-- Newer versions deprecate and remove code needed by Arquillian -->
+		<selenium.version>4.1.1</selenium.version>
 	</properties>
 
 	<modules>
+		<module>learn-jakartaee-ejb</module>
+		<module>learn-jakartaee-jaxrs</module>
 		<module>learn-jakartaee-jsp</module>
 		<module>learn-jakartaee-jpa</module>
-		<module>learn-jakartaee-jaxrs</module>
 		<module>learn-jakartaee-jsf</module>
 		<module>learn-jakartaee-struts</module>
 		<module>learn-jakartaee-spring</module>
-		<module>learn-jakartaee-ejb</module>
+		<module>learn-jakartaee-legacy-support</module>
+		<module>learn-jakartaee-test</module>
 	</modules>
 
 	<dependencyManagement>
@@ -58,12 +68,103 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.eclipse.transformer</groupId>
-				<artifactId>org.eclipse.transformer.cli</artifactId>
-				<version>${eclipse.transformer.version}</version>
-				<scope>provided</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<profiles>
+		<profile>
+			<id>liberty</id>
+			<build>
+				<plugins>
+					<plugin>
+						<!-- mvn -P liberty liberty:run -->
+						<groupId>io.openliberty.tools</groupId>
+						<artifactId>liberty-maven-plugin</artifactId>
+						<version>${liberty-maven-plugin.version}</version>
+						<configuration>
+							<runtimeArtifact>
+								<groupId>io.openliberty</groupId>
+								<artifactId>openliberty-jakartaee9</artifactId>
+								<version>${liberty-runtime.version}</version>
+								<type>zip</type>
+							</runtimeArtifact>
+							<stripVersion>true</stripVersion>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>wildfly</id>
+			<build>
+				<plugins>
+					<plugin>
+						<!-- mvn -P wildfly cargo:run -->
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven3-plugin</artifactId>
+						<version>${cargo-maven-plugin.version}</version>
+						<configuration>
+							<container>
+								<containerId>${cargo-wildfly-runtime}</containerId>
+								<systemProperties>
+ 									<spring.profiles.active>dev</spring.profiles.active>
+								</systemProperties>
+							</container>
+							<configuration>
+								<properties>
+									<cargo.start.jvmargs>
+										--add-opens java.base/java.lang=ALL-UNNAMED
+										--add-opens java.base/java.util=ALL-UNNAMED
+										--add-opens=java.base/java.io=ALL-UNNAMED
+									</cargo.start.jvmargs>
+								</properties>
+							</configuration>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>tomee</id>
+			<build>
+				<plugins>
+					<plugin>
+						<!-- mvn -P tomee tomee:run -->
+						<groupId>org.apache.tomee.maven</groupId>
+						<artifactId>tomee-maven-plugin</artifactId>
+						<version>${tomee-maven-plugin.version}</version>
+						<configuration>
+							<tomeeVersion>${tomee-runtime.version}</tomeeVersion>
+							<tomeeClassifier>plus</tomeeClassifier>
+							<args>-Dspring.profiles.active=dev --add-opens java.base/java.lang=ALL-UNNAMED</args>
+							<systemVariables>
+								<tomee.mp.scan>all</tomee.mp.scan>
+							</systemVariables>
+							<context>${project.artifactId}</context>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<build>
+		<plugins>
+			<plugin>
+				<!-- TomEE test cases need this module setting -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<systemPropertyVariables>
+						<browser>phantomjs</browser>
+					</systemPropertyVariables>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+        </plugins>
+    </build>
+
+
 </project>
